assets/css/style.scss
// SEC: Global
// ===========

@import "reset.css";

@font-face {
   font-family: Montserrat;
   src: url("../fonts/Montserrat-Light.otf") format("opentype");
}
@font-face {
   font-family: Montserrat;
   font-weight: bold;
   src: url("../fonts/Montserrat-Regular.otf") format("opentype");
}

// Some definitions
$pagePaddingTop: 1rem;
$pagePaddingSide: 2rem;
$pagePadding: $pagePaddingTop $pagePaddingSide;
$animSpeed: 1s;
$mainNavHeight: 6rem;
$mainNavPaddingTop: 1rem;
$hoverOpacity: 0.8;
$focusOpacity: 0.9;
$mouseAnimSpeed: 125ms;

// Some extensible classes
.clearfix {
   &:after {
      content: "";
      display: table;
      clear: both;
   }
}

.link-mouse-effect {
   &:hover {
      opacity: $hoverOpacity;
      transition: $mouseAnimSpeed;
   }

   &:active {
      opacity: $focusOpacity;
   }
}


* {
   box-sizing: border-box;
}

html {
   font-family: "Montserrat", "proxima-nova", "Helvetica Neue", "Helvetica", Arial, sans-serif;
   background: #fafafa;
   color: #404040;
   overflow-y: scroll;    // Prevents the animation jump when switching from selection to info views
}

.wrapper {
  transition: 300ms;
  width: 100%;
}


// SEC: General Page
// =================

.page, .modal {
   width: 100%;
   height: 100%;
   position: relative;

   > header {
      background: #5ac8fa;
      font-size: 1.2rem;
      color: #fff;

      h1 {
         padding: $pagePadding;
      }
   }

   > main {

      .offer {
         $icon_diameter: 1.3rem;
         $icon_offset: 1rem;

         text-align: left;
         border: 1px solid #bfbfbf;
         background: #fff;
         padding: 1rem;
         position: relative;
         transition: $animSpeed;

         .selected-icon {
            position: absolute;
            transition: $animSpeed;
            left: $icon_offset;
            top: $icon_offset;
            background-image: url("../img/icon_check.svg");
            background-repeat: no-repeat;
            background-size: 100%;
            background-position: center;
            width: $icon_diameter;
            height: $icon_diameter;
            opacity: 0;
         }

         .info-icon {
            &:before {
               position: absolute;
               z-index: 10;
               right: $icon_offset;
               top: $icon_offset;
               content: "i";
               font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
               color: #fff;
               font-weight: bold;
               font-size: 0.9rem;
               background: #bfbfbf;
               width: $icon_diameter;
               height: $icon_diameter;
               line-height: $icon_diameter;
               border-radius: 50%;
               text-align: center;
               cursor: pointer;
            }

         }

         .offer-image-cont {
            background: #ffffff;
            text-align: center;
            width: 100%;
            height: 10rem;
            padding: 0.5rem;
            display: flex;
            justify-content: space-around;
            align-items: center;

            .offer-image {
               max-width: 100%;
               max-height: 100%;
            }
         }

         .tag {
            text-align: left;
            border-radius: 2px;
            border: 1px solid #fff;
            padding: 0.2rem 0.7rem;
            text-transform: uppercase;
            font-weight: bold;
            font-size: 0.7rem;
            display: inline-block;
            margin: 1.3rem 0 0.5rem;

            &.toddler {
               $color: #00bcd4;
               color: $color;
               border-color: $color;
               background: #f7fdfd;
            }

            &.newborn {
               $color: #9c27b0;
               color: $color;
               border-color: $color;
               background-color: #faf7fc;
            }

            &.all-ages {
               $color: #334659;
               color: $color;
               border-color: $color;
               background: #f6f7f8;
            }

            &.kids-4 {
               $color: #8cc152; 
               color: $color;
               border-color: $color;
               background-color: #fbfdf6;
            }
         }

         .name {
            text-align: left;
            display: block;
            font-weight: bold;
            line-height: 1.4;
            font-size: 0.9rem;
         }
      }
   }
}
/* ... */

